[gd_scene load_steps=27 format=3 uid="uid://qbewrt1qo2sa"]

[ext_resource type="Texture2D" uid="uid://cs5wd6231kws6" path="res://assets/backgrounds/bgd-in-st.png" id="1_jedoh"]
[ext_resource type="Script" uid="uid://mrn0k1twlgx1" path="res://Scripts/station_building.gd" id="1_xoy17"]
[ext_resource type="PackedScene" uid="uid://oqopv2vp1ofj" path="res://player/player.tscn" id="2_8bctb"]
[ext_resource type="Texture2D" uid="uid://3e4pbgctojhd" path="res://assets/inside-station-objects/table1.png" id="3_4mfnc"]
[ext_resource type="Texture2D" uid="uid://w0x0hqibndb" path="res://assets/inside-station-objects/frame.png" id="4_8bctb"]
[ext_resource type="Texture2D" uid="uid://c7tyns7xenxyn" path="res://assets/inside-station-objects/chair.png" id="5_0fwel"]
[ext_resource type="Texture2D" uid="uid://beurw8pd2tcjx" path="res://assets/inside-station-objects/table2.png" id="5_4mfnc"]
[ext_resource type="Texture2D" uid="uid://brbenr6dio74u" path="res://assets/inside-station-objects/cabinet.png" id="7_0iakx"]
[ext_resource type="Texture2D" uid="uid://nqsop3whqxax" path="res://assets/inside-station-objects/lights.png" id="8_7mwff"]
[ext_resource type="Script" uid="uid://baddn342dmq27" path="res://Scripts/door.gd" id="9_7mwff"]
[ext_resource type="PackedScene" uid="uid://cml6p061tfgu" path="res://scenes/UIRoot.tscn" id="10_kb5dq"]
[ext_resource type="Script" uid="uid://bfao5jtjmvofb" path="res://Scripts/cyber_sp.gd" id="11_qm4h5"]
[ext_resource type="Texture2D" uid="uid://ckt7fgr60oj7" path="res://assets/characters/cyberSp.png" id="12_60bg7"]
[ext_resource type="Script" uid="uid://hmrssuxngej0" path="res://Scripts/dialogs/dialogManager.gd" id="13_nt64q"]
[ext_resource type="Texture2D" uid="uid://gv6kuh7qm3cm" path="res://assets/portraits/cyberSp.png" id="14_alp0d"]
[ext_resource type="Texture2D" uid="uid://c4mgbc5lna52g" path="res://assets/portraits/mainP.png" id="15_2xv26"]
[ext_resource type="FontFile" uid="uid://u3e74nua3vqy" path="res://assets/fonts/Roboto_Slab/static/RobotoSlab-ExtraBold.ttf" id="16_2xv26"]
[ext_resource type="FontFile" uid="uid://8yen3fgmky61" path="res://assets/fonts/Roboto_Slab/static/RobotoSlab-Bold.ttf" id="17_a5qgv"]
[ext_resource type="FontFile" uid="uid://cjuuvvlu8mwwf" path="res://assets/fonts/Roboto_Slab/RobotoSlab-VariableFont_wght.ttf" id="17_xoy17"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_qunjg"]
size = Vector2(50, 63)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_0fwel"]
size = Vector2(86, 205)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_kb5dq"]
size = Vector2(36, 83.5)

[sub_resource type="CircleShape2D" id="CircleShape2D_a5qgv"]
radius = 30.0666

[sub_resource type="RectangleShape2D" id="RectangleShape2D_05luc"]
size = Vector2(48, 156)

[sub_resource type="CircleShape2D" id="CircleShape2D_0joe8"]
radius = 55.0364

[sub_resource type="RectangleShape2D" id="RectangleShape2D_a5qgv"]
size = Vector2(117, 47.5)

[node name="Station-building" type="Node2D"]
y_sort_enabled = true
script = ExtResource("1_xoy17")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(84, 136.527)
scale = Vector2(0.599344, 0.638314)
texture = ExtResource("1_jedoh")

[node name="Player" parent="." groups=["player"] instance=ExtResource("2_8bctb")]
z_index = 1
position = Vector2(71, 435)
scale = Vector2(1.15, 1.15)

[node name="Camera2D" type="Camera2D" parent="Player"]

[node name="table1" type="StaticBody2D" parent="."]
z_index = 1
y_sort_enabled = true
position = Vector2(9, -21)

[node name="Sprite2D" type="Sprite2D" parent="table1"]
position = Vector2(158.156, 296.098)
scale = Vector2(0.594861, 0.594861)
texture = ExtResource("3_4mfnc")

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="table1"]
position = Vector2(0.93256, -14.0673)
scale = Vector2(1.02923, 1.02923)
polygon = PackedVector2Array(67.1059, 431.456, 66, 425, 38, 430, 62, 409, 26, 402, 26, 320, 226.448, 318.749, 226.448, 400.363, 144, 401, 142, 347, 108, 355, 105, 391, 75, 400, 75, 409, 104, 421, 103, 432, 74, 423)

[node name="frame" type="StaticBody2D" parent="."]
z_index = 2

[node name="Sprite2D" type="Sprite2D" parent="frame"]
position = Vector2(70.5, 128)
scale = Vector2(0.598775, 0.644067)
texture = ExtResource("4_8bctb")

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="frame"]
polygon = PackedVector2Array(-106, -45, -65.0535, -45.4908, -65, -10, -16, -8, -16, -46, 145, -43, 146, -1, 223, 0, 224, -44, 248, -46, 247, 82, 362, 82, 355, -194, 291, -261, -162, -265, -162, 558, 418, 568, 405, 233, 249, 235, 249, 475, -109, 474)

[node name="chair" type="StaticBody2D" parent="."]
z_index = 1
y_sort_enabled = true

[node name="Sprite2D" type="Sprite2D" parent="chair"]
position = Vector2(-10.5, 38.9131)
scale = Vector2(0.652941, 0.652941)
texture = ExtResource("5_0fwel")

[node name="CollisionShape2D" type="CollisionShape2D" parent="chair"]
position = Vector2(-33, 78.5)
shape = SubResource("RectangleShape2D_qunjg")

[node name="table2" type="StaticBody2D" parent="."]
z_index = 1
y_sort_enabled = true

[node name="Sprite2D" type="Sprite2D" parent="table2"]
position = Vector2(36.9531, 22.7723)
scale = Vector2(0.658967, 0.658968)
texture = ExtResource("5_4mfnc")

[node name="CollisionShape2D" type="CollisionShape2D" parent="table2"]
position = Vector2(33, 50.5)
shape = SubResource("RectangleShape2D_0fwel")

[node name="cabinet" type="StaticBody2D" parent="."]
z_index = 1
y_sort_enabled = true

[node name="Sprite2D" type="Sprite2D" parent="cabinet"]
position = Vector2(-88, 139)
scale = Vector2(0.489286, 0.489286)
texture = ExtResource("7_0iakx")

[node name="CollisionShape2D" type="CollisionShape2D" parent="cabinet"]
position = Vector2(-89, 213.75)
shape = SubResource("RectangleShape2D_kb5dq")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="cabinet"]
z_index = 2
position = Vector2(104, 96)
shape = SubResource("CircleShape2D_a5qgv")

[node name="Sprite2D2" type="Sprite2D" parent="."]
position = Vector2(72.0312, 345.938)
scale = Vector2(0.627023, 0.679099)
texture = ExtResource("8_7mwff")

[node name="station-exit" type="Area2D" parent="."]
position = Vector2(199, 156)
script = ExtResource("9_7mwff")
target_scene = "res://scenes/Station.tscn"
target_door_name = "st-building-enter"

[node name="Sprite2D" type="Sprite2D" parent="station-exit"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="station-exit"]
position = Vector2(83, 1)
shape = SubResource("RectangleShape2D_05luc")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="UIroot" parent="CanvasLayer" instance=ExtResource("10_kb5dq")]
offset_left = -1.0
offset_right = -1.0

[node name="CyberSp" type="Area2D" parent="."]
z_index = 1
y_sort_enabled = true
position = Vector2(111, 92)
script = ExtResource("11_qm4h5")

[node name="Sprite2D" type="Sprite2D" parent="CyberSp"]
position = Vector2(-3.45312, 1.56837)
scale = Vector2(0.280805, 0.280805)
texture = ExtResource("12_60bg7")
offset = Vector2(0, -300)

[node name="CollisionShape2D" type="CollisionShape2D" parent="CyberSp"]
position = Vector2(0, 3)
shape = SubResource("CircleShape2D_0joe8")

[node name="DialogueManager" type="CanvasLayer" parent="."]
visible = false
script = ExtResource("13_nt64q")

[node name="Panel" type="Panel" parent="DialogueManager"]
modulate = Color(0.44946, 0.813107, 0.960462, 0.662745)
offset_left = -1.0
offset_top = 1.0
offset_right = 1151.0
offset_bottom = 650.0

[node name="PortraitLeft" type="TextureRect" parent="DialogueManager"]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -549.0
offset_top = -552.0
offset_right = 1171.0
offset_bottom = 1290.0
grow_horizontal = 2
grow_vertical = 0
scale = Vector2(0.298563, 0.298563)
texture = ExtResource("14_alp0d")

[node name="PortraitRight" type="TextureRect" parent="DialogueManager"]
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -600.0
offset_top = -564.0
offset_right = 1246.0
offset_bottom = 1149.0
grow_horizontal = 0
grow_vertical = 0
scale = Vector2(0.328163, 0.328163)
texture = ExtResource("15_2xv26")

[node name="PanelContainer" type="PanelContainer" parent="DialogueManager"]
offset_left = 39.0
offset_top = 436.0
offset_right = 1008.0
offset_bottom = 624.0

[node name="NameLabel" type="Label" parent="DialogueManager"]
offset_left = 78.0
offset_top = 452.0
offset_right = 370.0
offset_bottom = 502.0
theme_override_colors/font_color = Color(0.67451, 0.607843, 0.694118, 1)
theme_override_fonts/font = ExtResource("16_2xv26")
theme_override_font_sizes/font_size = 23

[node name="TextLabel" type="RichTextLabel" parent="DialogueManager"]
offset_left = 78.0
offset_top = 510.0
offset_right = 967.0
offset_bottom = 606.0
theme_override_colors/default_color = Color(0.67451, 0.607843, 0.694118, 1)
theme_override_fonts/normal_font = ExtResource("17_xoy17")
theme_override_fonts/bold_font = ExtResource("17_a5qgv")
theme_override_font_sizes/normal_font_size = 23
theme_override_font_sizes/bold_font_size = 23

[node name="TypingTimer" type="Timer" parent="DialogueManager"]
wait_time = 0.03

[node name="MonitorAcces" type="Area2D" parent="."]
script = ExtResource("9_7mwff")
target_scene = "res://scenes/Monitor.tscn"

[node name="CollisionShape2D" type="CollisionShape2D" parent="MonitorAcces"]
z_index = 1
position = Vector2(192.5, 400.25)
shape = SubResource("RectangleShape2D_a5qgv")

[connection signal="body_entered" from="station-exit" to="station-exit" method="_on_body_entered"]
[connection signal="body_entered" from="CyberSp" to="CyberSp" method="_on_body_entered"]
[connection signal="ready" from="CyberSp" to="CyberSp" method="_on_ready"]
[connection signal="body_entered" from="MonitorAcces" to="MonitorAcces" method="_on_body_entered"]
